# typg

./: .cursorrules  .gitignore  07638-typg.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TASKS.md  TODO.md  WORK.md  build.sh  install.sh  llms.txt  publish.sh
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 89594d85-bb89-4928-b01c-456a9fc17df6.json  b0b4513f-e6d2-4a37-be33-62ea346f25ef.json  e10833bf-f05b-40a5-9146-f749d8397322.json  ee86ba65-d8ba-4a0a-8539-22d733937228.json
.swarm/session/: state.json
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  server.rs  tests.rs
cli/tests/: integration.rs
core/typg-core/: Cargo.toml  build.rs
core/typg-core/benches/: cache_vs_index.rs
core/typg-core/src/: discovery.rs  index.rs  lib.rs  output.rs  query.rs  search.rs  tags.rs
core/typg-core/tests/: cached_search.rs  discovery.rs  output.rs  query_parser.rs  search_filters.rs
docs/: spec.md
linked/: fontations  fontgrep  fontgrepc  fontlift  typf
py/typg-python/: Cargo.toml  README.md
py/typg-python/python/typg_python/: cli.py
py/typg-python/python/typg_python/libtypg_python.dylib.dSYM/Contents/: Info.plist
py/typg-python/python/typg_python/libtypg_python.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libtypg_python.dylib.yml
py/typg-python/src/: lib.rs
py/typg-python/tests/: test_find.py
typg-cli/: Cargo.toml
typg-cli/src/: lib.rs  main.rs  server.rs  tests.rs
typg-cli/tests/: integration.rs
typg-core/: Cargo.toml  build.rs
typg-core/benches/: cache_vs_index.rs  codepoints.rs
typg-core/src/: discovery.rs  index.rs  lib.rs  output.rs  query.rs  search.rs  tags.rs
typg-core/tests/: cached_search.rs  discovery.rs  metadata_names.rs  output.rs  query_parser.rs  search_filters.rs
typg-python/: Cargo.toml  README.md  pyproject.toml
typg-python/python/typg/: __init__.py
typg-python/python/typg_python/: __init__.py  cli.py
typg-python/src/: lib.rs
typg-python/tests/: test_find.py
