[package]
name = "typg-cli"
version = "1.0.1"
edition = "2021"
authors = ["FontLab"]
description = "CLI for typg (made by FontLab https://www.fontlab.com/)"
license = "MIT"
homepage = "https://www.fontlab.com/"

[[bin]]
name = "typg"
path = "src/main.rs"

[features]
default = []
# High-performance embedded index using LMDB and Roaring Bitmaps
hpindex = ["typg-core/hpindex"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
typg-core = { version = "=1.0.1", path = "../typg-core" }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.10"
tower = { version = "0.4", features = ["util"] }
