[package]
name = "typg-cli"
version = "0.0.0"
edition = "2021"
authors = ["FontLab"]
description = "CLI for typg (made by FontLab https://www.fontlab.com/)"
license = "MIT"
homepage = "https://www.fontlab.com/"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
typg-core = { path = "../typg-core" }

[dev-dependencies]
tempfile = "3.10"
