[package]
name = "typg-core"
version = "0.0.0"
edition = "2021"
authors = ["FontLab"]
description = "Core search/discovery engine for typg (made by FontLab https://www.fontlab.com/)"
license = "MIT"
homepage = "https://www.fontlab.com/"
repository = "https://github.com/fontlaborg/typg"
build = "build.rs"

[features]
default = ["fontations"]
fontations = ["read-fonts", "skrifa"]
typf-fontdb = []

[dependencies]
anyhow = "1.0"
walkdir = "2.5.0"
read-fonts = { version = "0.36.0", optional = true }
skrifa = { version = "0.39.0", optional = true }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
fontgrep = { path = "../linked/fontgrep" }

[[bench]]
name = "codepoints"
harness = false
