[package]
name = "typg-core"
version = "1.0.1"
edition = "2021"
authors = ["FontLab"]
description = "Core search/discovery engine for typg (made by FontLab https://www.fontlab.com/)"
license = "MIT"
homepage = "https://www.fontlab.com/"
repository = "https://github.com/fontlaborg/typg"
build = "build.rs"

[features]
default = ["fontations"]
fontations = ["read-fonts", "skrifa"]
typf-fontdb = []
# High-performance embedded index using LMDB and Roaring Bitmaps
hpindex = ["heed", "roaring", "bytemuck", "xxhash-rust", "bincode", "byteorder"]

[dependencies]
anyhow = "1.0"
walkdir = "2.5.0"
read-fonts = { version = "0.36.0", optional = true }
skrifa = { version = "0.39.0", optional = true }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"

# High-performance index dependencies (optional)
heed = { version = "0.21", optional = true }
roaring = { version = "0.10", optional = true }
bytemuck = { version = "1.18", optional = true, features = ["derive"] }
xxhash-rust = { version = "0.8", optional = true, features = ["xxh3"] }
bincode = { version = "1.3", optional = true }
byteorder = { version = "1.5", optional = true }

[dev-dependencies]
tempfile = "3.10"
proptest = "1.5"
criterion = "0.5"

[[bench]]
name = "cache_vs_index"
harness = false
required-features = ["hpindex"]
