[package]
name = "typg-python"
version = "1.0.1"
edition = "2021"
authors = ["FontLab"]
description = "PyO3 bindings for typg-core (made by FontLab https://www.fontlab.com/)"
license = "MIT"
homepage = "https://www.fontlab.com/"
repository = "https://github.com/fontlaborg/typg"

[lib]
name = "typg_python"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]
# Forward hpindex feature to typg-core for indexed search
hpindex = ["typg-core/hpindex"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.26", features = ["abi3-py310"] }
regex = "1.11"
typg-core = { version = "=1.0.1", path = "../typg-core" }

[dev-dependencies]
indoc = "2.0"
pyo3 = { version = "0.26", features = ["abi3-py310"] }
tempfile = "3.10"
read-fonts = "0.36.0"
